syntax = "proto3";  
option go_package = "github.com/bigelle/student-portal/proto/auth";

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginResponse {
  string name = 1;
  int32 user_id = 2;
  string role = 3;
  string session = 4;
  string csrf = 5; 
}

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
}